--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@phosphor-icons/react": "^2.0.6",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
